Add button to exec synchronization script

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PASSWORD = ""
 
 # Path to the folder where quests will be stored
 QUESTS_PATH = ""
+
+# Path to the synchronization script
+SYNCHRONIZATION_SCRIPT = ""
