Add bingo server configuration

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ QUESTS_PATH = ""
 
 # Path to the synchronization script
 SYNCHRONIZATION_SCRIPT = ""
+
+# Bingo server configuration
+BINGO_SERVER_START_SCRIPT = "start.sh"
+BINGO_SERVER_STOP_SCRIPT = "stop.sh"
